fix: grammar mistakes

--- a/quantumult.conf
+++ b/quantumult.conf
@@ -48,8 +48,9 @@ https://cdn.jsdelivr.net/gh/chavyleung/scripts/box/chavy.boxjs.js, tag=BoxJs, pa
 
 
 [policy]
+
 # 其中港台番剧策略组对应的分流规则默认处于关闭状态，如需使用请在 分流-引用 中开启。
-url-latency-benchmark=优选节点, check-interval=1200, tolerance=0, img-url=https://cdn.jsdelivr.net/gh/Hk-Gosuto/QuantumultX/img/Urltest.png
+url-latency-benchmark=优选节点, server-tag-regex=^(?!.*网易云), check-interval=1200, tolerance=0, img-url=https://cdn.jsdelivr.net/gh/Hk-Gosuto/QuantumultX/img/Urltest.png
 static=自选节点, 优选节点, proxy, img-url=https://cdn.jsdelivr.net/gh/Hk-Gosuto/QuantumultX/img/Static.png
 static=海外服务, 自选节点, img-url=https://cdn.jsdelivr.net/gh/Hk-Gosuto/QuantumultX/img/Global.png
 static=地理位置, 大陆服务, 自选节点, img-url=https://cdn.jsdelivr.net/gh/Hk-Gosuto/QuantumultX/img/localtion.png
